<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@drawable/map_background">

    <ImageView
        android:id="@+id/title_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="8dp"
        android:src="@drawable/ic_title"
        android:layout_gravity="center_vertical"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginLeft="5dp"
            android:gravity="bottom"
            android:textColor="#ffffff"
            android:textSize="18dp"
            android:text="@string/str_title"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_bt_state_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:textColor="#ffffff"
                android:textSize="10dp"
                android:text="@string/str_bt_state_title"/>

            <TextView
                android:id="@+id/tv_bt_state"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:textColor="#ffffff"
                android:textSize="10dp"
                android:text="@string/str_bt_state_default"/>

        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/bt_setting"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="10dp"
        android:background="@drawable/ic_setting"/>



</LinearLayout>
