<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <!-- 标题 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/map_background"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/setting_title_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_setting_param" />

        <TextView
            android:id="@+id/tv_setting_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/str_setting"
            android:textColor="#ffffff"
            android:textSize="18dp" />

    </LinearLayout>

    <!-- 提示信息 -->
    <LinearLayout
        android:id="@+id/info_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/info"
        android:visibility="gone"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ic_info"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/img_info" />

        <TextView
            android:id="@+id/tv_setting_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="4"
            android:padding="8dp"
            android:textColor="@color/font_orange" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/scroll_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <!-- 分隔符 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:background="@color/separator" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/str_setting_area"
                android:textColor="@color/font_blue"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/tv_area_width"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="2.3"
                    android:gravity="center"
                    android:text="区域宽度(单位：m)："
                    android:textColor="@color/font_white"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_area_width"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_weight="2"
                    android:background="@drawable/bg_et"
                    android:gravity="center"
                    android:hint="0.10~100"
                    android:inputType="numberDecimal"
                    android:maxLength="6"
                    android:text="10.00"
                    android:textColor="@color/font_white"
                    android:textColorHint="@color/font_light_gray"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/tv_area_length"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="2.3"
                    android:gravity="center"
                    android:text="区域长度(单位：m)："
                    android:textColor="@color/font_white"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_area_length"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_weight="2"
                    android:background="@drawable/bg_et"
                    android:gravity="center"
                    android:hint="0.10~100"
                    android:inputType="numberDecimal"
                    android:maxLength="6"
                    android:text="10.00"
                    android:textColor="@color/font_white"
                    android:textColorHint="@color/font_light_gray"
                    android:textSize="15sp" />

            </LinearLayout>

            <!-- 分隔符 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/separator" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/str_setting_array"
                android:textColor="@color/font_blue"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/tv_array_row"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="2.3"
                    android:gravity="center"
                    android:text="行数："
                    android:textColor="@color/font_white"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_array_row"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_weight="2"
                    android:background="@drawable/bg_et"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="10"
                    android:textColor="@color/font_white"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/tv_array_col"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="2.3"
                    android:gravity="center"
                    android:text="列数："
                    android:textColor="@color/font_white"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_array_col"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_weight="2"
                    android:background="@drawable/bg_et"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="10"
                    android:textColor="@color/font_white"
                    android:textSize="15sp" />

            </LinearLayout>

            <!-- 分隔符 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/separator" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/str_setting_mode"
                android:textColor="@color/font_blue"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/tv_mode"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="2.3"
                    android:gravity="center"
                    android:text="选择控制模式："
                    android:textColor="@color/font_white"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_mode"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_weight="2"
                    android:background="@drawable/bg_et"
                    android:editable="false"
                    android:gravity="center"
                    android:text="自动步进"
                    android:textColor="@color/font_white"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/tv_width_step_space"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="2.3"
                    android:gravity="center"
                    android:text="宽方向步进(单位：m)："
                    android:textColor="@color/font_white"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_width_step_space"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_weight="2"
                    android:background="@drawable/bg_et"
                    android:editable="false"
                    android:gravity="center"
                    android:text="1.00"
                    android:textColor="@color/font_white"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/tv_length_step_space"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="2.3"
                    android:gravity="center"
                    android:text="长方向步进(单位：m)："
                    android:textColor="@color/font_white"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_length_step_space"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_weight="2"
                    android:background="@drawable/bg_et"
                    android:editable="false"
                    android:gravity="center"
                    android:text="1.00"
                    android:textColor="@color/font_white"
                    android:textSize="15sp" />

            </LinearLayout>

            <!-- 分隔符 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/separator" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <Button
            android:id="@+id/bt_default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="恢复默认" />

        <Button
            android:id="@+id/bt_save"
            android:layout_width="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="保存" />

    </LinearLayout>


</LinearLayout>
